Fix Aside z-index, Implement Popular Category, Footer.

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,3 +15,8 @@
 		@apply w-[10rem] block text-center px-4 py-2 rounded-full  bg-dark mt-4 hover:bg-secondaryDark transition;
 	}
 }
+
+body,
+html {
+	scroll-behavior: smooth;
+}
